# jrsgen

./: .gitignore  Cargo.toml  Makefile
java-dependencies/: Makefile  build.gradle  settings.gradle
src/: config.rs  main.rs
src/formatter/: class.rs  mod.rs
src/generator/: class.rs  method.rs  mod.rs
src/parser/: class_tree.rs  guava.rs  jvm.rs  mod.rs
