[package]
name = "jrsgen"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
ejni = "0.1.0"
anyhow = "1.0.56"
tempfile = "3.3.0"
rayon = "1.5.1"
syn = "1.0.90"
convert_case = "0.5.0"
quote = "1.0.17"
proc-macro2 = "1.0.36"

[dependencies.clap]
version = "3.1.8"
features = ["derive"]

[dependencies.jni]
version = "0.19.0"
features = ["invocation"]
